# StickerFit

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
docs/: beta-release-checklist.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  locale.rs  main.rs
src/components/: AdvancedDetailsPanel.tsx  AppIcons.tsx  InspectionErrorCard.tsx  MediaSelectionPreview.tsx  mediaSelectionMath.test.ts  mediaSelectionMath.ts
src/components/editor/: AdvancedOptimizerSettingsPanel.tsx  DesktopHeader.tsx  EditorOverlayPanel.tsx  EditorResultsOverlay.tsx  EditorWorkspace.tsx  FrameContextMenu.tsx  FrameDialogs.tsx  FrameEditingOverlays.tsx  (+6 more)
src/hooks/: useEditorWorkflowBridge.test.ts  useEditorWorkflowBridge.ts  useFrameEditorController.ts  useMediaWorkflowController.ts  usePlaybackTimelineController.test.ts  usePlaybackTimelineController.ts
src/locales/: editorText.ts  messages.ts
src/platform/: runtime.ts
src/styles/: app-base.css  app-shell.css  editor-workspace.css  results-panels.css
src/types/: editor.ts  workflow.ts
src/utils/: formatters.test.ts  formatters.ts  frameDnD.test.ts  frameDnD.ts  frameEditing.ts  frameSelection.test.ts  frameSelection.ts  pathLabels.test.ts  pathLabels.ts  timelineFrames.ts
tests/: web-smoke.spec.ts
tools/: bootstrap-build-windows.ps1  size-report.ps1  test-release-sidecar.ps1  test-sample-gifs.ps1
tools/ffmpeg/: build-minimal-ffmpeg.ps1
(+6 files in other folders)
